--- a/Anaconda/01.Anaconda.md
+++ b/Anaconda/01.Anaconda.md
@@ -1,10 +1,23 @@
-# Install Anaconda from 
+# Preinstall core programming environment
+
+
+## Basic coding, ML, and scientific applications install
+sudo apt-get install vim csh flex gfortran libgfortran3 g++ \
+                     cmake xorg-dev patch zlib1g-dev libbz2-dev \
+                     libboost-all-dev openssh-server libcairo2 \
+                     libcairo2-dev libeigen3-dev lsb-core \
+                     lsb-base net-tools network-manager \
+                     git-core git-gui git-doc xclip gdebi-core
+                     
+
+
+## Install Anaconda from 
 https://www.anaconda.com/distribution/
 
 Installed current version for your platform and extract
 chmod +x Anaconda3-2019.03-Linux-x86_64.sh
 
-## Configure Anaconda for all users
+### Configure Anaconda for all users
 Create a user for Anaconda
 
 $ sudo adduser anaconda
@@ -12,7 +25,7 @@ $ sudo adduser anaconda
 $ sudo ./Anaconda3-2019.03-Linux-x86_64.sh -b -p /opt/anaconda
 
 
-### Execute the anaconda install script and choose /opt/anaconda as the folder. Once installed chage the ownership and execution previlages of installed directory
+#### Execute the anaconda install script and choose /opt/anaconda as the folder. Once installed chage the ownership and execution previlages of installed directory
 
 $ sudo chown -R anaconda:anaconda /opt/anaconda 
 
@@ -28,7 +41,7 @@ $ conda create -n wft-ml
 
 $ source /opt/anaconda/bin/activate wft-ml
 
-### Create a personal environment
+#### Create a personal environment
 
 $ /opt/anaconda/bin/conda create -n my_env package1 package2
 
@@ -39,17 +52,20 @@ su anaconda
 $ /opt/anaconda/bin/pip install packageX
 
 
-# Update the environment so all users have conda directory in their path. add /opt/anaconda/bin
+### Update the environment so all users have conda directory in their path. add /opt/anaconda/bin
 
 $ sudo vim /etc/environment
 
 PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/opt/anaconda/bin"
 
 
-# Update conda env
+### update/install conda env - _conda update_ always installs the highest version with the same major version number, whereas _conda install_ always installs the highest version
 
 $ /opt/anaconda/bin/conda update conda
 
 $ /opt/anaconda/bin/conda update anaconda
 
 
+References
+
+https://medium.com/@pjptech/installing-anaconda-for-multiple-users-650b2a6666c6
