--- a/Anaconda/01.Anaconda.md
+++ b/Anaconda/01.Anaconda.md
@@ -52,20 +52,31 @@ su anaconda
 $ /opt/anaconda/bin/pip install packageX
 
 
-### Update the environment so all users have conda directory in their path. add /opt/anaconda/bin
+Update the environment so all users have conda directory in their path. add /opt/anaconda/bin
 
 $ sudo vim /etc/environment
 
 PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/opt/anaconda/bin"
 
 
-### update/install conda env - _conda update_ always installs the highest version with the same major version number, whereas _conda install_ always installs the highest version
+update/install conda env - _conda update_ always installs the highest version with the same major version number, whereas _conda install_ always installs the highest version
 
 $ /opt/anaconda/bin/conda update conda
 
 $ /opt/anaconda/bin/conda update anaconda
 
+Add packages to specific environment
+$ conda install –name <environment> <package>
 
+### Check your install
+Verify conda install
+$ conda info
+$ conda info --envs
+
+List all packages installed
+$ conda list
 References
 
 https://medium.com/@pjptech/installing-anaconda-for-multiple-users-650b2a6666c6
+https://www.freecodecamp.org/news/why-you-need-python-environments-and-how-to-manage-them-with-conda-85f155f4353c/
+https://kapeli.com/cheat_sheets/Conda.docset/Contents/Resources/Documents/index
