--- a/Anaconda/03.Conda Environment.md
+++ b/Anaconda/03.Conda Environment.md
@@ -2,7 +2,8 @@
 
 ## Parallel processing
 
-### Install ipyparallel - Interactive Parallel Computing with IPython - https://github.com/ipython/ipyparallel
+### Install ipyparallel - Interactive Parallel Computing with IPython - 
+https://github.com/ipython/ipyparallel
 
 $ conda install -c anaconda ipyparallel
 
@@ -16,10 +17,13 @@ $ ipcluster nbextension disable
 
 ### JupyterHub Install - To install for all users on JupyterHub, as root:
 
-  jupyter nbextension install --sys-prefix --py ipyparallel
-  jupyter nbextension enable --sys-prefix --py ipyparallel
-  jupyter serverextension enable --sys-prefix --py ipyparallel
+$ jupyter nbextension install --sys-prefix --py ipyparallel
 
-### Install Pandaral·lel - https://github.com/nalepae/pandarallel
+$ jupyter nbextension enable --sys-prefix --py ipyparallel
+
+$ jupyter serverextension enable --sys-prefix --py ipyparallel
+
+### Install Pandaral·lel - 
+https://github.com/nalepae/pandarallel
 
 $ /opt/anaconda/bin/pip install pandarallel
