--- a/Anaconda/03.Conda Environment.md
+++ b/Anaconda/03.Conda Environment.md
@@ -27,3 +27,49 @@ $ jupyter serverextension enable --sys-prefix --py ipyparallel
 https://github.com/nalepae/pandarallel
 
 $ /opt/anaconda/bin/pip install pandarallel
+
+
+## Install Metakernel for Jupyter
+$ conda install metakernel
+$ pip install matlab_kernel
+$ pip install octave_kernel
+$ conda install r-essentials
+$ conda install -c r rstudio
+
+pip install gnuplot_kernel
+python -m gnuplot_kernel install --user
+
+
+$ sudo /opt/anaconda/bin/jupyter-kernelspec install prebuild/jupyter-caf-kernel/Coarray-Fortran/
+
+pip install scilab_kernel
+
+
+conda install -c conda-forge ipywidgets
+SOS
+pip install sos-notebook
+
+python -m sos_notebook.install
+
+sudo /opt/anaconda/bin/python -m sos_notebook.install
+
+
+conda install -c conda-forge nodejs 
+
+jupyter labextension install jupyterlab_voyager
+
+Install large dataset visualization 
+https://github.com/vaexio/vaex
+conda install -c conda-forge vaex
+
+
+https://github.com/nicolaskruchten/pivottable
+conda install -c prkrekel pivottablejs 
+
+https://github.com/quantopian/qgrid
+conda install qgrid
+
+conda install -c conda-forge jupyterlab
+
+https://www.npmjs.com/package/jupyterlab_voyager_test
+jupyter labextension install jupyterlab_voyager
