--- a/Anaconda/02.Jupyterhub.md
+++ b/Anaconda/02.Jupyterhub.md
@@ -1,6 +1,11 @@
 Enable multi user environment
 
+conda install -c conda-forge jupyterhub   # installs jupyterhub and proxy
+conda install notebook                    # needed if running the notebook servers locally
+sudo /opt/anaconda/bin/pip install sudospawner
+
 
 References
 
 https://professorkazarinoff.github.io/jupyterhub-engr101/
+https://github.com/jupyterhub/jupyterhub/wiki/Using-sudo-to-run-JupyterHub-without-root-privileges
