--- a/Anaconda/01.Anaconda.md
+++ b/Anaconda/01.Anaconda.md
@@ -1,14 +1,22 @@
 # Preinstall core programming environment
 
+https://medium.com/@IsaacJK/setting-up-a-ubuntu-18-04-1-lts-system-for-deep-learning-and-scientific-computing-fab19f7ca39d
+
 
 ## Basic coding, ML, and scientific applications install
-sudo apt-get install vim csh flex gfortran libgfortran3 g++ \
-                     cmake xorg-dev patch zlib1g-dev libbz2-dev \
-                     libboost-all-dev openssh-server libcairo2 \
-                     libcairo2-dev libeigen3-dev lsb-core \
-                     lsb-base net-tools network-manager \
-                     git-core git-gui git-doc xclip gdebi-core
-                     
+sudo apt-get update -y
+
+sudo apt-get install vim csh flex gcc g++ cmake gfortran
+
+sudo apt-get install -f libgfortran3 
+
+sudo apt-get install xorg-dev patch zlib1g-dev libbz2-dev libboost-all-dev openssh-server 
+
+sudo apt-get install libcairo2 libcairo2-dev libeigen3-dev lsb-core lsb-base net-tools network-manager git-core git-gui git-doc xclip gdebi-core
+
+# if there is error about cdrom media
+sudo sed -i '/cdrom/d' /etc/apt/sources.list
+ 
 
 
 ## Install Anaconda from 
