--- a/Anaconda/01.Anaconda.md
+++ b/Anaconda/01.Anaconda.md
@@ -45,9 +45,9 @@ $ sudo chmod -R go+rX /opt/anaconda
 
 $ su anaconda
 
-$ conda create -n wft-ml
+$ conda create -n rrr-ml
 
-$ source /opt/anaconda/bin/activate wft-ml
+$ source /opt/anaconda/bin/activate rrr-ml
 
 #### Create a personal environment
 
